@@ -134,6 +134,9 @@ o Backed out Ian Fellows's patches because of errors.
 
 Version 2.0-11
 
-o Small change to eliminate warnings produced in R 2.12.0
+o Small change to eliminate warnings produced in R 2.12.0.
+
+o Added nrows and ncols argument to plot.efflist() (following suggstion by Michael Friendly).
 
 o Small fix to docs.
+
